syntax = "proto3";

package react;

option go_package = "./proto/react";

// ReactService definition
service ReactService {
    rpc CreateAReact(CreateRequest) returns (CreateResponse);
    rpc ReadAReact(ReadRequest) returns (ReadResponse);
    rpc ReadAllReactsOfAPost(ReadAllRequest) returns (ReadAllResponse);
    rpc UpdateAReact(UpdateRequest) returns (UpdateResponse);
    rpc DeleteAReact(DeleteRequest) returns (DeleteResponse);
    rpc DeleteAllReactsOfAPost(DeleteAllReactsOfAPostRequest) returns (DeleteAllReactsOfAPostResponse);
}

// Enum for react types
enum ReactType {
    LIKE = 0;
    DISLIKE = 1;
    LOVE = 2;
    HAHA = 3;
    WOW = 4;
    SAD = 5;
    ANGRY = 6;
    CARE = 7;
}

// React message definition
message React {
    string id = 1;
    string post_id = 2;
    string author = 3;
    ReactType type = 4;
    string created_at = 5;
    string updated_at = 6;
}

// CreateRequest message definition
message CreateRequest {
    string post_id = 1;
    string author = 2;
    ReactType type = 3;
}

// CreateResponse message definition
message CreateResponse {
    string id = 1;
    string post_id = 2;
    string author = 3;
    string type = 4;
    string created_at = 5;
    string updated_at = 6;
    Status status = 7;
}

// ReadRequest message definition
message ReadRequest {
    string id = 1;
}

// ReadResponse message definition
message ReadResponse {
    string id = 1;
    string post_id = 2;
    string author = 3;
    string type = 4;
    string created_at = 5;
    string updated_at = 6;
    Status status = 7;
}

// ReadAllRequest message definition
message ReadAllRequest {
    string post_id = 1;
}

// ReadAllResponse message definition
message ReadAllResponse {
    repeated React reacts = 1;
    Status status = 2;
}

// UpdateRequest message definition
message UpdateRequest {
    string id = 1;
    string post_id = 2;
    ReactType type = 3;
}

// UpdateResponse message definition
message UpdateResponse {
    string id = 1;
    string post_id = 2;
    string author = 3;
    string type = 4;
    string created_at = 5;
    string updated_at = 6;
    Status status = 7;
}

// DeleteRequest message definition
message DeleteRequest {
    string id = 1;
}

// DeleteResponse message definition
message DeleteResponse {
    string id = 1;
    Status status = 2;
}

// DeleteAllReactsOfAPostRequest message definition
message DeleteAllReactsOfAPostRequest {
    string post_id = 1;
}

// DeleteAllReactsOfAPostResponse message definition
message DeleteAllReactsOfAPostResponse {
    string post_id = 1;
    Status status = 2;
}

// status
message Status {
    int32 code = 1;
    string message = 2;
}